--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/bootstrap";
-@import "bootstrap-table";
+@import "plugins/bootstrap-table";
+@import "plugins/sweetalert";
 
 .navbar{
   margin: 0;
